examples/test/testpolicy768.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy768
  namespace: namespace42
spec:
  podSelector:
    matchLabels:
      key21: value35
      key49: value13
      key32: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value22
      podSelector:
        matchLabels:
          key32: value3
